syntax = "proto3";

import "common.proto";
option java_package = "ca.wisecode.lucene.grpc.models";
option java_outer_classname = "ProjectProto";
option java_multiple_files = true;

service ProjectService {
    rpc readProject (JsonIn) returns (JsonOut) {}
}




